name:                lasca
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Alexander Nemish
maintainer:          anemish@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  default-extensions:   OverloadedStrings
                        RecordWildCards
                        NamedFieldPuns
                        FlexibleContexts
                        PatternSynonyms
                        StrictData
  build-depends:        base >=4.9,
                        text,
                        utf8-string,
                        haskeline,
                        process,
                        containers,
                        multiset,
                        prettyprinter >=1.1,
                        megaparsec >= 6.0.0,
                        scientific,
                        lens >= 4.15,
                        llvm-hs >= 5.0.0,
                        llvm-hs-pure >= 5.0.0,
                      --  llvm-hs-pretty >= 0.1.0.0,
                        optparse-applicative,
                        bytestring,
                        murmur-hash,
                        directory,
                        filepath,
                        mtl
  extra-libraries:      lascart
  default-language:     Haskell2010
  extra-lib-dirs:       .
  ghc-options:          -O0
                        -Wincomplete-patterns
                        -funbox-strict-fields
                        -fhide-source-paths

  hs-source-dirs:       src/lib
  exposed-modules:
                        Lasca.Compiler
                        Lasca.Options
                        Lasca.Infer
                        Lasca.Desugar
                        Lasca.Namer
                        Lasca.Emit
                        Lasca.EmitCommon
                        Lasca.EmitDynamic
                        Lasca.EmitStatic
                        Lasca.Codegen
                        Lasca.JIT
                        Lasca.Lexer
                        Lasca.Parser
                        Lasca.Syntax
                        Lasca.Type
executable lasca
  other-extensions:     GADTs
  build-depends:        base >=4.9,
                        lasca
  Extra-libraries:      lascart
  extra-lib-dirs:       .
  default-language:     Haskell2010
  ghc-options:          -O0
                        -rtsopts
                        -Wincomplete-patterns
                        -funbox-strict-fields
  hs-source-dirs:       src/lasca
  main-is:              Main.hs

test-suite lasca-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test
  main-is:             Main.hs
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.9,
                       lasca,
                       text,
                       utf8-string,
                       megaparsec >= 6.0.0,
                       tasty, tasty-hunit, tasty-smallcheck, tasty-quickcheck
  ghc-options:         -threaded -rtsopts
  extra-lib-dirs:      .
  default-language:    Haskell2010
--executable gencode
--  other-extensions:    GADTs
--  build-depends:       base >=4.9
--  default-language:    Haskell2010
--  hs-source-dirs:      gencode
--  main-is:             GenBench.hs