name:                lasca
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Alexander Nemish
maintainer:          anemish@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  default-extensions:   OverloadedStrings
                        RecordWildCards
                        NamedFieldPuns
                        FlexibleContexts
                        PatternSynonyms
                        StrictData
  build-depends:        base >=4.9,
                        text,
                        utf8-string,
                        haskeline,
                        process,
                        containers,
                        multiset,
                        prettyprinter >=1.1,
                        -- fixed Lexer.float parsing or integer values
                        megaparsec >= 6.4.0,
                        scientific,
                        lens >= 4.15,
                        llvm-hs >= 5.0.0,
                        llvm-hs-pure >= 5.0.0,
                      --  llvm-hs-pretty >= 0.1.0.0,
                        optparse-applicative,
                        bytestring,
                        murmur-hash,
                        directory,
                        filepath,
                        mtl
  default-language:     Haskell2010
  ghc-options:          -Wincomplete-patterns
                        -funbox-strict-fields
                        -fhide-source-paths
                        -fPIC
  Extra-lib-dirs:       .
  hs-source-dirs:       src/lib
  exposed-modules:
                        Lasca.Compiler
                        Lasca.Options
                        Lasca.Infer
                        Lasca.Desugar
                        Lasca.Namer
                        Lasca.Emit
                        Lasca.EmitCommon
                        Lasca.EmitDynamic
                        Lasca.EmitStatic
                        Lasca.Codegen
                        Lasca.JIT
                        Lasca.Lexer
                        Lasca.Parser
                        Lasca.Syntax
                        Lasca.Type
                        Lasca.Modules
executable lasca
  other-extensions:     GADTs
  build-depends:        base >=4.9,
                        lasca
  Extra-libraries:      gc, pthread, pcre2-8
  Extra-lib-dirs:       .
  default-language:     Haskell2010
  ghc-options:          -rtsopts
                        -threaded
                        -Wincomplete-patterns
                        -funbox-strict-fields
                        -fPIC
                        -rdynamic
  if os(darwin)
    extra-libraries:    lascartStatic
    ghc-options:        -fwhole-archive-hs-libs 
  else
    ghc-options:        -optl-Wl,--whole-archive -optl-Wl,lascartStatic.a -optl-Wl,--no-whole-archive
  hs-source-dirs:       src/lasca
  main-is:              Main.hs

test-suite lasca-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test
  main-is:             TestMain.hs
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.9,
                       lasca,
                       text,
                       directory,
                       bytestring,
                       shelly,
                       utf8-string,
                       megaparsec >= 6.0.0,
                       Glob,
                       filepath,
                       tasty,
                       tasty-hunit,
                       tasty-smallcheck,
                       tasty-quickcheck,
                       tasty-golden,
                       tasty-program
  ghc-options:         -threaded -rtsopts
  if os(darwin)
    extra-libraries:    lascartStatic
    ghc-options:        -fwhole-archive-hs-libs 
  else
    ghc-options:        -optl-Wl,--whole-archive -optl-Wl,lascartStatic.a -optl-Wl,--no-whole-archive
  Extra-libraries:      gc, pthread, pcre2-8
  Extra-lib-dirs:      .
  default-language:    Haskell2010
--executable gencode
--  other-extensions:    GADTs
--  build-depends:       base >=4.9
--  default-language:    Haskell2010
--  hs-source-dirs:      gencode
--  main-is:             GenBench.hs