name:                nemish
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Alex Nemish
maintainer:          anemish@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable nemish
  other-extensions:    GADTs
  build-depends:       base >=4.6,
                        process,
                        containers,
                        pretty >=1.1 && <1.2,
                        parsec >=3.1 && <3.2,
                        mtl,
                        haskeline
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
