name:                nemish
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Alexander Nemish
maintainer:          anemish@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable nemish
  other-extensions:    GADTs
  build-depends:       base >=4.6,
                        text,
                        process,
                        containers,
                        pretty >=1.1,
                        parsec >=3.1.2,
                        vector,
                        indents,
                        neat-interpolation,
                        mtl
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs
